# HotReloadRts

./: .gitignore  Cargo.toml  Readme.md
assets/: boid.glb  player.glb  select_box_shader.vert  texture_shader.frag
assets/blender_models/: player.blend
assets/shaders/: bone_mesh_shader.frag  bone_mesh_shader.vert  hp_shader.frag  hp_shader.vert  mesh_shader.frag  mesh_shader.vert  select_box_shader.frag  spell_shader.frag  spell_shader.vert  texture_shader.vert
executable/: Cargo.toml
executable/src/: main.rs
game/: Cargo.toml  build.rs  desicion_script.txt
game/src/: behaviour_tree.rs  commands.rs  damage.rs  deltatime.rs  entity_system.rs  game.rs  handle_inputs.rs  lib.rs  loading.rs  reload_hot.rs  render.rs  spells.rs  state.rs  types.rs  ui.rs
game/src/animation_system/: animation_map.rs  mod.rs
game/src/math/: mod.rs
game/src/spells/: active_spells.rs  all_spells.rs  mod.rs  system.rs
logic/: Cargo.toml
logic/src/: ai.rs  damage.rs  lib.rs  random_damage.rs  spell_logic.rs
shared/: Cargo.toml
shared/src/: lib.rs
