[package]
name = "executable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
shared = { path = "../shared" }
gl_lib = { path = "../../rust-gl-lib"}
game = { path = "../game", optional = true }

[features]
no_reload = ["game"]
