[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
libloading = "0.7"
nalgebra = "0.31.1"
failure = "0.1"
nohash-hasher = "0.2.0"

[features]
no_reload = []

[dependencies.gl_lib]
path = "../../rust-gl-lib"
features = [] # can set "debug" here to get gl debug output

[lib]
name = "game"
crate-type = ['rlib', 'dylib']
